added a nice photo to the background

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body {
     background-color:#BFB0BA;
+    background-image: url('homepic.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 #bigBox {
