--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 #pageMainHeader {
     color: wheat;
     margin: 10px;
+    font-size: 4vw;
     text-align: center;
     border: groove;
     border-radius: 10px;
@@ -24,6 +25,7 @@ body {
 #cityName{
     color: wheat;
     margin: 10px;
+    font-size: 2vw;
     text-align: center;
     border: groove;
     border-radius: 10px;
@@ -32,7 +34,7 @@ body {
 }
 
 #zipCodeBox {
-    width: auto;
+    width: 10vw;
     background-color: #403B39;
     color:#BFB0BA
 
@@ -53,7 +55,7 @@ body {
     background-color: #F2AFA0;
     border-radius: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 5vw;
     margin: 10px;
     border: groove;
 }
@@ -64,7 +66,7 @@ body {
     grid-column:3/4;
     grid-row:1/3;
     text-align: justify;
-    font-size: 50px;
+    font-size: 5vw;
     margin: 10px;
     border: groove;
 }
@@ -75,7 +77,7 @@ body {
     grid-row:2/3;
     border-radius: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 5vw;
     margin: 10px;
     border: groove;
 }
@@ -84,7 +86,7 @@ body {
     background-color: #F2AFA0;
     border-radius: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 5vw;
     margin: 10px;
     border: groove;
 }
