--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
     border-radius: 10px;
     text-align: center;
     font-size: 5vw;
-    margin: 10px;
+    margin: 1vw;
     border: groove;
 }
 
@@ -67,7 +67,7 @@ body {
     grid-row:1/3;
     text-align: justify;
     font-size: 5vw;
-    margin: 10px;
+    margin: 1vw;
     border: groove;
 }
 
@@ -78,7 +78,7 @@ body {
     border-radius: 10px;
     text-align: center;
     font-size: 5vw;
-    margin: 10px;
+    margin: 1vw;
     border: groove;
 }
 
@@ -87,7 +87,7 @@ body {
     border-radius: 10px;
     text-align: center;
     font-size: 5vw;
-    margin: 10px;
+    margin: 1vw;
     border: groove;
 }
 
